# cargo-testmap

./: LICENSE  README.md  flake.nix  result
.github/workflows/: ci.yml  release.yml
cargo-testmap/: Cargo.toml  DESIGN.md  README.md  build.rs  deny.toml
cargo-testmap/completions/: cargo-testmap.fish
cargo-testmap/src/: cli.rs  config.rs  main.rs  util.rs
cargo-testmap/src/collect/: coverage_run.rs  database.rs  lcov.rs  llvm.rs  mod.rs  test_discovery.rs
cargo-testmap/src/report/: app.js  classify.rs  database.rs  highlight.rs  html.rs  mod.rs  style.css
coverage_showcase/: Cargo.toml
coverage_showcase/src/: lib.rs
coverage_showcase/tests/: showcase.rs
example/: .gitignore  Cargo.toml  README.md
example/src/: calc.rs  lib.rs  parser.rs
example/tests/: integration.rs
