[package]
name = "cargo-testmap"
version = "0.1.0"
edition = "2024"
description = "Cargo subcommand that maps every source line to the tests that cover it"
license = "MIT"

[[bin]]
name = "cargo-testmap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
regex = "1"
anyhow = "1"
indicatif = "0.17"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
# Content-fingerprinting of test binaries so the resume cache invalidates
# whenever the code or tests change (not just on a schema bump).
blake3 = "1"
