[package]
name = "cargo-testmap"
version = "0.1.1"
edition = "2024"
description = "Cargo subcommand that maps every source line to the tests that cover it"
license = "MIT"

[[bin]]
name = "cargo-testmap"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
regex = "1"
anyhow = "1"
indicatif = "0.17"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
